--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postcss-px2rem": "^0.3.0",
     "swiper": "^5.3.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
