--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
     "lib-flexible": "^0.3.2",
+    "lodash": "^4.17.15",
     "mint-ui": "^2.2.13",
     "postcss-px2rem": "^0.3.0",
     "swiper": "^5.3.1",
+    "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
