--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mint-ui": "^2.2.13",
     "postcss-px2rem": "^0.3.0",
     "swiper": "^5.3.1",
-    "vee-validate": "^3.2.5",
+    "vee-validate": "2.2.15",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
